--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,10 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/cryptzox
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://dpg-d49emgmr433s73ai5vu0-a.oregon-postgres.render.com/cryptzox
+postgresql://cryptzox_user:5ggmdUfjr9hlN29jhN2qjcMFruLwnhD2@dpg-d49emgmr433s73ai5vu0-a.oregon-postgres.render.com/cryptzox
+spring.datasource.username=cryptzox_user
+spring.datasource.password=5ggmdUfjr9hlN29jhN2qjcMFruLwnhD2
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
